# typed_boto3

./: .gitignore  README.md  pyproject.toml
.github/workflows/: bandit.yml  ci.yml  release.yml
tests/: conftest.py
tests/integration/: test_apigateway_client.py  test_apigatewayv2_client.py  test_athena_client.py  test_bedrock_client.py  test_cloudformation_client.py  test_cloudwatch_client.py  test_cognito_idp_client.py  test_dynamodb_client.py  test_ec2_client.py  test_ecs_client.py  test_elbv2_client.py  test_events_client.py  test_firehose_client.py  test_glue_client.py  test_iam_client.py  test_kinesis_client.py  test_kms_client.py  test_lambda_client.py  test_logs_client.py  test_rds_client.py  test_redshift_client.py  test_route53_client.py  test_s3_client.py  test_sagemaker_client.py  test_secretsmanager_client.py  test_sns_client.py  test_sqs_client.py  test_ssm_client.py  test_stepfunctions_client.py  test_sts_client.py
tests/types/: _bad_usage.py  _good_usage.py  test_typing_smoke.py
tests/unit/: test_config.py  test_generator_discover.py  test_generator_emitter.py  test_generator_resolver.py  test_lenient_validate.py  test_overloads_emitter.py
typed_boto3/: __init__.py  _region.py  _service_name.py
typed_boto3/core/: base.py  config.py
typed_boto3/generator/: __main__.py  cli.py  discover.py  emitter.py  naming.py  overloads_emitter.py  regions_emitter.py  resolver.py
typed_boto3/generator/templates/: service_client.py.jinja
typed_boto3/services/: __init__.py  apigateway_client.py  apigatewayv2_client.py  athena_client.py  bedrock_client.py  cloudformation_client.py  cloudwatch_client.py  cognito_idp_client.py  dynamodb_client.py  ec2_client.py  ecs_client.py  elbv2_client.py  events_client.py  firehose_client.py  glue_client.py  iam_client.py  kinesis_client.py  kms_client.py  lambda_client.py  logs_client.py  rds_client.py  redshift_client.py  route53_client.py  s3_client.py  sagemaker_client.py  secretsmanager_client.py  sns_client.py  sqs_client.py  ssm_client.py  stepfunctions_client.py  sts_client.py
